--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <title>gruop</title>
 </head>
 <body>
+
+    <header> 
+        <H1>
+        Header 
+    </H1></header>
+
     <div>
         Hello World!
     </div>
-    <header> <H1>
-        Header 
-    </H1></header>
-</body>
+    </body>
 </html>
