add generator password in script.js and index.html

--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>gruop</title>
-</head>
-<body>
+  </head>
+  <body>
+    <header>
+      <h1>Header</h1>
+    </header>
 
-    <header> 
-        <H1>
-        Header 
-    </H1></header>
+    <div>Hello World!</div>
 
-    <div>
-        Hello World!
-    </div>
-    </body>
+    <h1>Password Generator</h1>
+  <div id="password"></div>
+  <button onclick="generatePassword()">Generate Password</button>
+  </body>
 </html>
