add Header full

--- a/index.html
+++ b/index.html
@@ -3,17 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>gruop</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-
-    <header> 
-        <H1>
-        Header 
-    </H1></header>
-
-    <div>
-        Hello World!
+    <div class="topic">
+        <h2>Статья про велосипеды</h2>
+        <p>
+            Велосипед – это не только средство передвижения, но и источник удовольствия, заботы о здоровье и экологически чистого образа жизни. С каждым годом увеличивается число людей, предпочитающих велосипед как средство передвижения в городе и за его пределами. В этой статье мы рассмотрим несколько аспектов, почему велосипед становится все более популярным и актуальным среди различных групп населения.
+        </p>
     </div>
-    </body>
+    <div class="topic">
+        <h2>Статья про машины</h2>
+        <p>
+            В современном мире машины стали неотъемлемой частью нашей повседневной жизни, претерпевая впечатляющую эволюцию от простых транспортных средств до высокотехнологичных интеллектуальных помощников. Этот путь развития не только улучшил наше передвижение, но и изменил сам характер взаимодействия с техникой.
+        </p>
+        <div class="links">
+            
+                  <img src="image/bike.png" alt="ait">
+           
+        </div>
+    </div>
+</body>
 </html>
